--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Movie List</title>
 </head>
 <body>
+  <h1>Movie List</h1>
   <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
